@@ -115,6 +115,7 @@
 <!ENTITY nch.prefs.makedonation "Podpořte vývoj">
 <!ENTITY nch.prefs.hostsmatchingregexp "Hostitelé odpovídající regulárnímu výrazu">
 <!ENTITY nch.prefs.servicesmatchingregexp "Služby odpovídající regulárnímu výrazu">
+<!ENTITY nch.prefs.allflapping "Všechny hostitele a služby, v kolísavém stavu (FLAPPING)">
 
 <!ENTITY nch.prefs.disable "Vypnout">
 <!ENTITY nch.prefs.disabled "Vypnutý">
