@@ -116,6 +116,7 @@
 <!ENTITY nch.prefs.makedonation "Make donation">
 <!ENTITY nch.prefs.hostsmatchingregexp "Hosts matching regular expression">
 <!ENTITY nch.prefs.servicesmatchingregexp "Services matching regular expression">
+<!ENTITY nch.prefs.allflapping "All flapping hosts and services">
 
 <!ENTITY nch.prefs.disable "Disable">
 <!ENTITY nch.prefs.disabled "Disabled">
