@@ -23,6 +23,15 @@
       </Description>
     </em:targetApplication>
 
+	<!-- Flock -->
+    <em:targetApplication>
+      <Description>
+        <em:id>{a463f10c-3994-11da-9945-000d60ca027b}</em:id>
+        <em:minVersion>0.9</em:minVersion>
+        <em:maxVersion>1.0</em:maxVersion>
+      </Description>
+    </em:targetApplication>
+
     <!-- Front End MetaData -->
     <em:name>Nagios Checker</em:name>
     <em:description>The statusbar indicator of the events from the network monitoring system Nagios. Information is parsed from Nagios web interface.</em:description>
